--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -12,7 +12,7 @@ jobs:
           node -v
           npm -v
   dependant-job:
-    runs-on: windows-lates
+    runs-on: windows-latest
     needs: [run-shell-command]
     steps:
       - name: echo a string
